ingress/04-consultingtypeservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"if
      ($request_method = OPTIONS) {\n  add_header Access-Control-Allow-Origin $http_origin
      always;\n  add_header Access-Control-Allow-Methods \"GET, POST, PUT, PATCH,
      DELETE, OPTIONS\" always;\n  add_header Access-Control-Allow-Headers \"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER\" always;\n  add_header Access-Control-Allow-Credentials
      \"true\" always;\n  add_header Access-Control-Max-Age 86400 always;\n  add_header
      Content-Type \"text/plain charset=UTF-8\" always;\n  add_header Content-Length
      0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin
      always;\nadd_header Access-Control-Allow-Credentials \"true\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-headers":"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER","nginx.ingress.kubernetes.io/cors-allow-methods":"GET, POST,
      PUT, PATCH, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"$http_origin","nginx.ingress.kubernetes.io/cors-max-age":"86400","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rewrite-target":"/consultingtypes/$2","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"consultingtypeservice-consultingtypes-ingress","namespace":"caritas"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.or [...]

      '
    nginx.ingress.kubernetes.io/configuration-snippet: "if ($request_method = OPTIONS)\
      \ {\n  add_header Access-Control-Allow-Origin $http_origin always;\n  add_header\
      \ Access-Control-Allow-Methods \"GET, POST, PUT, PATCH, DELETE, OPTIONS\" always;\n\
      \  add_header Access-Control-Allow-Headers \"Authorization, Content-Type, Cache-Control,\
      \ Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER\"\
      \ always;\n  add_header Access-Control-Allow-Credentials \"true\" always;\n\
      \  add_header Access-Control-Max-Age 86400 always;\n  add_header Content-Type\
      \ \"text/plain charset=UTF-8\" always;\n  add_header Content-Length 0 always;\n\
      \  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin always;\n\
      add_header Access-Control-Allow-Credentials \"true\" always;\n"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Cache-Control,
      Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE,
      OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: $http_origin
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /consultingtypes/$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: consultingtypeservice-consultingtypes-ingress
  namespace: caritas
spec:
  ingressClassName: nginx
  rules:
  - host: api.oriso-dev.site
    http:
      paths:
      - backend:
          service:
            name: oriso-platform-consultingtypeservice
            port:
              number: 8083
        path: /service/consultingtypes(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.oriso-dev.site
    secretName: api-oriso-dev-site-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"if
      ($request_method = OPTIONS) {\n  add_header Access-Control-Allow-Origin $http_origin
      always;\n  add_header Access-Control-Allow-Methods \"GET, OPTIONS\" always;\n  add_header
      Access-Control-Allow-Headers \"Authorization, Content-Type, Cache-Control, Pragma,
      Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER\"
      always;\n  add_header Access-Control-Allow-Credentials \"true\" always;\n  add_header
      Access-Control-Max-Age 86400 always;\n  add_header Content-Type \"text/plain
      charset=UTF-8\" always;\n  add_header Content-Length 0 always;\n  return 204;\n}\nadd_header
      Access-Control-Allow-Origin $http_origin always;\nadd_header Access-Control-Allow-Credentials
      \"true\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-headers":"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER","nginx.ingress.kubernetes.io/cors-allow-methods":"GET, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"$http_origin","nginx.ingress.kubernetes.io/cors-max-age":"86400","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rewrite-target":"/settings","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"consultingtypeservice-settings-ingress","namespace":"caritas"},"spec":{"ingressClass [...]

      '
    nginx.ingress.kubernetes.io/configuration-snippet: "if ($request_method = OPTIONS)\
      \ {\n  add_header Access-Control-Allow-Origin $http_origin always;\n  add_header\
      \ Access-Control-Allow-Methods \"GET, OPTIONS\" always;\n  add_header Access-Control-Allow-Headers\
      \ \"Authorization, Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token,\
      \ x-csrf-token, X-Requested-With, X-WHITELIST-HEADER\" always;\n  add_header\
      \ Access-Control-Allow-Credentials \"true\" always;\n  add_header Access-Control-Max-Age\
      \ 86400 always;\n  add_header Content-Type \"text/plain charset=UTF-8\" always;\n\
      \  add_header Content-Length 0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin\
      \ $http_origin always;\nadd_header Access-Control-Allow-Credentials \"true\"\
      \ always;\n"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Cache-Control,
      Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: $http_origin
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /settings
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: consultingtypeservice-settings-ingress
  namespace: caritas
spec:
  ingressClassName: nginx
  rules:
  - host: api.oriso-dev.site
    http:
      paths:
      - backend:
          service:
            name: oriso-platform-consultingtypeservice
            port:
              number: 8083
        path: /service/settings(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.oriso-dev.site
    secretName: api-oriso-dev-site-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"if
      ($request_method = OPTIONS) {\n  add_header Access-Control-Allow-Origin $http_origin
      always;\n  add_header Access-Control-Allow-Methods \"GET, POST, PUT, PATCH,
      DELETE, OPTIONS\" always;\n  add_header Access-Control-Allow-Headers \"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER\" always;\n  add_header Access-Control-Allow-Credentials
      \"true\" always;\n  add_header Access-Control-Max-Age 86400 always;\n  add_header
      Content-Type \"text/plain charset=UTF-8\" always;\n  add_header Content-Length
      0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin
      always;\nadd_header Access-Control-Allow-Credentials \"true\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-headers":"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER","nginx.ingress.kubernetes.io/cors-allow-methods":"GET, POST,
      PUT, PATCH, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"$http_origin","nginx.ingress.kubernetes.io/cors-max-age":"86400","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"consultingtypeservice-settingsadmin-ingress","namespace":"caritas"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.oriso-dev.site","http":{"paths":[{"backend":{"service":{"name":"consultingtypeservice","port":{"number":8083}}},"path" [...]

      '
    nginx.ingress.kubernetes.io/configuration-snippet: "if ($request_method = OPTIONS)\
      \ {\n  add_header Access-Control-Allow-Origin $http_origin always;\n  add_header\
      \ Access-Control-Allow-Methods \"GET, POST, PUT, PATCH, DELETE, OPTIONS\" always;\n\
      \  add_header Access-Control-Allow-Headers \"Authorization, Content-Type, Cache-Control,\
      \ Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER\"\
      \ always;\n  add_header Access-Control-Allow-Credentials \"true\" always;\n\
      \  add_header Access-Control-Max-Age 86400 always;\n  add_header Content-Type\
      \ \"text/plain charset=UTF-8\" always;\n  add_header Content-Length 0 always;\n\
      \  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin always;\n\
      add_header Access-Control-Allow-Credentials \"true\" always;\n"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Cache-Control,
      Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE,
      OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: $http_origin
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /settingsadmin
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: consultingtypeservice-settingsadmin-ingress
  namespace: caritas
spec:
  ingressClassName: nginx
  rules:
  - host: api.oriso-dev.site
    http:
      paths:
      - backend:
          service:
            name: oriso-platform-consultingtypeservice
            port:
              number: 8083
        path: /service/settingsadmin(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.oriso-dev.site
    secretName: api-oriso-dev-site-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"if
      ($request_method = OPTIONS) {\n  add_header Access-Control-Allow-Origin $http_origin
      always;\n  add_header Access-Control-Allow-Methods \"GET, POST, PUT, PATCH,
      DELETE, OPTIONS\" always;\n  add_header Access-Control-Allow-Headers \"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER\" always;\n  add_header Access-Control-Allow-Credentials
      \"true\" always;\n  add_header Access-Control-Max-Age 86400 always;\n  add_header
      Content-Type \"text/plain charset=UTF-8\" always;\n  add_header Content-Length
      0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin
      always;\nadd_header Access-Control-Allow-Credentials \"true\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-headers":"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With,
      X-WHITELIST-HEADER","nginx.ingress.kubernetes.io/cors-allow-methods":"GET, POST,
      PUT, PATCH, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"$http_origin","nginx.ingress.kubernetes.io/cors-max-age":"86400","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rewrite-target":"/topic-groups/$2","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"consultingtypeservice-topic-groups-ingress","namespace":"caritas"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.oriso-de [...]

      '
    nginx.ingress.kubernetes.io/configuration-snippet: "if ($request_method = OPTIONS)\
      \ {\n  add_header Access-Control-Allow-Origin $http_origin always;\n  add_header\
      \ Access-Control-Allow-Methods \"GET, POST, PUT, PATCH, DELETE, OPTIONS\" always;\n\
      \  add_header Access-Control-Allow-Headers \"Authorization, Content-Type, Cache-Control,\
      \ Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER\"\
      \ always;\n  add_header Access-Control-Allow-Credentials \"true\" always;\n\
      \  add_header Access-Control-Max-Age 86400 always;\n  add_header Content-Type\
      \ \"text/plain charset=UTF-8\" always;\n  add_header Content-Length 0 always;\n\
      \  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin always;\n\
      add_header Access-Control-Allow-Credentials \"true\" always;\n"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Cache-Control,
      Pragma, Expires, X-CSRF-Token, x-csrf-token, X-Requested-With, X-WHITELIST-HEADER
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE,
      OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: $http_origin
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /topic-groups/$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: consultingtypeservice-topic-groups-ingress
  namespace: caritas
spec:
  ingressClassName: nginx
  rules:
  - host: api.oriso-dev.site
    http:
      paths:
      - backend:
          service:
            name: oriso-platform-consultingtypeservice
            port:
              number: 8083
        path: /service/topic-groups(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.oriso-dev.site
    secretName: api-oriso-dev-site-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/configuration-snippet":"if
      ($request_method = OPTIONS) {\n  add_header Access-Control-Allow-Origin $http_origin
      always;\n  add_header Access-Control-Allow-Methods \"GET, POST, PUT, PATCH,
      DELETE, OPTIONS\" always;\n  add_header Access-Control-Allow-Headers \"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, X-Requested-With,
      rcToken, rcUserId, rctoken, rcuserid, X-WHITELIST-HEADER\" always;\n  add_header
      Access-Control-Allow-Credentials \"true\" always;\n  add_header Access-Control-Max-Age
      86400 always;\n  add_header Content-Type \"text/plain charset=UTF-8\" always;\n  add_header
      Content-Length 0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin
      $http_origin always;\nadd_header Access-Control-Allow-Credentials \"true\" always;\n","nginx.ingress.kubernetes.io/cors-allow-credentials":"true","nginx.ingress.kubernetes.io/cors-allow-headers":"Authorization,
      Content-Type, Cache-Control, Pragma, Expires, X-CSRF-Token, X-Requested-With,
      rcToken, rcUserId, rctoken, rcuserid, X-WHITELIST-HEADER","nginx.ingress.kubernetes.io/cors-allow-methods":"GET,
      POST, PUT, PATCH, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"$http_origin","nginx.ingress.kubernetes.io/cors-max-age":"86400","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rewrite-target":"/topic/$2","nginx.ingress.kubernetes.io/ssl-redirect":"true","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"consultingtypeservice-topic-ingress","namespace":"caritas"},"spec":{"ingressClassName":"nginx","rules":[{"host":"api.oriso-dev.site", [...]

      '
    nginx.ingress.kubernetes.io/configuration-snippet: "if ($request_method = OPTIONS)\
      \ {\n  add_header Access-Control-Allow-Origin $http_origin always;\n  add_header\
      \ Access-Control-Allow-Methods \"GET, POST, PUT, PATCH, DELETE, OPTIONS\" always;\n\
      \  add_header Access-Control-Allow-Headers \"Authorization, Content-Type, Cache-Control,\
      \ Pragma, Expires, X-CSRF-Token, X-Requested-With, rcToken, rcUserId, rctoken,\
      \ rcuserid, X-WHITELIST-HEADER\" always;\n  add_header Access-Control-Allow-Credentials\
      \ \"true\" always;\n  add_header Access-Control-Max-Age 86400 always;\n  add_header\
      \ Content-Type \"text/plain charset=UTF-8\" always;\n  add_header Content-Length\
      \ 0 always;\n  return 204;\n}\nadd_header Access-Control-Allow-Origin $http_origin\
      \ always;\nadd_header Access-Control-Allow-Credentials \"true\" always;\n"
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, Content-Type, Cache-Control,
      Pragma, Expires, X-CSRF-Token, X-Requested-With, rcToken, rcUserId, rctoken,
      rcuserid, X-WHITELIST-HEADER
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE,
      OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: $http_origin
    nginx.ingress.kubernetes.io/cors-max-age: '86400'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /topic/$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: consultingtypeservice-topic-ingress
  namespace: caritas
spec:
  ingressClassName: nginx
  rules:
  - host: api.oriso-dev.site
    http:
      paths:
      - backend:
          service:
            name: oriso-platform-consultingtypeservice
            port:
              number: 8083
        path: /service/topic(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.oriso-dev.site
    secretName: api-oriso-dev-site-tls
