ingress/16-element-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element-ingress
  namespace: caritas
  annotations:
    # SSL/TLS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: element.oriso.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oriso-platform-element
            port:
              number: 8087
  tls:
  - hosts:
    - element.oriso.org
    secretName: element-oriso-site-tls
