ingress/21-status-page-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-page-ingress
  namespace: caritas
  annotations:
    # SSL/TLS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: status.oriso.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oriso-platform-status-page
            port:
              number: 9200
  tls:
  - hosts:
    - status.oriso.org
    secretName: status-oriso-site-tls
