ingress/22-storybook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storybook-ingress
  namespace: caritas
  annotations:
    # SSL/TLS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: storybook.oriso.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oriso-platform-storybook
            port:
              number: 6006
  tls:
  - hosts:
    - storybook.oriso.org
    secretName: storybook-oriso-site-tls
